--- a/index.html
+++ b/index.html
@@ -44,9 +44,12 @@
     <footer></footer>
     <main>
       <div class="container">
-        <h1>Human stories & ideas</h1>
+        <h1>
+          Human <br />
+          stories & ideas
+        </h1>
         <p>A place to read, write, and deepen your understanding</p>
-        <button>Start Reading</button>
+        <button class="btn">Start Reading</button>
       </div>
     </main>
   </body>
