--- a/index.html
+++ b/index.html
@@ -36,12 +36,11 @@
           <a href="#" class="sm-hidden">our story</a>
           <a href="#" class="sm-hidden">membership</a>
           <a href="#" class="sm-hidden">write</a>
-          <a href="#">sign in</a>
+          <a href="#" class="weird-hidden">sign in</a>
           <a href="#" class="btn">Get Started</a>
         </nav>
       </div>
     </header>
-    <footer></footer>
     <main>
       <div class="container">
         <h1>
@@ -52,5 +51,23 @@
         <button class="btn">Start Reading</button>
       </div>
     </main>
+    <footer>
+      <nav>
+        <div class="container">
+          <nav>
+            <a href="#">Help</a>
+            <a href="#" class="lg-hidden">Status</a>
+            <a href="#">About</a>
+            <a href="#" class="lg-hidden">Careers</a>
+            <a href="#" class="lg-hidden">Press</a>
+            <a href="#" class="lg-hidden">Blog</a>
+            <a href="#">Privacy</a>
+            <a href="#">Terms</a>
+            <a href="#"class="lg-hidden">Text to Speech</a>
+            <a href="#"class="lg-hidden">Teams</a>
+          </nav>
+        </div>
+      </nav>
+    </footer>
   </body>
 </html>
